name:                language-openscad
version:             0.1.7
x-revision:          1
synopsis:            A simple parser for OpenSCAD
description:         A simple parser for OpenSCAD
homepage:            http://www.github.com/bgamari/language-openscad
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
copyright:           (c) 2014 Ben Gamari
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/bgamari/language-openscad.git

library
  exposed-modules:     Language.OpenSCAD
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.13,
                       trifecta >= 2.0 && < 2.2,
                       charset >= 0.3 && < 0.4,
                       parsers >= 0.12 && <0.13,
                       scientific >= 0.3,
                       bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-parse-openscad
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base,
                       attoparsec,
                       bytestring,
                       filepath,
                       pretty-show,
                       text,
                       tasty,
                       tasty-silver,
                       tasty-quickcheck,
                       QuickCheck >= 2.13 && < 2.14,
                       language-openscad
  default-language:    Haskell2010

